--- a/examples/agentic-app-demo/.yalc/@agent-labs/agent-chat/package.json
+++ b/examples/agentic-app-demo/.yalc/@agent-labs/agent-chat/package.json
@@ -61,35 +61,6 @@
     "rxjs": "^7.8.2",
     "uuid": "^11.1.0"
   },
-  "devDependencies": {
-    "@sxzz/eslint-config": "^7.0.1",
-    "@sxzz/prettier-config": "^2.2.1",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@types/node": "^22.15.17",
-    "@types/react": "^19.1.3",
-    "@types/react-dom": "^19.1.4",
-    "@vitejs/plugin-react": "^4.4.1",
-    "@vitejs/plugin-react-oxc": "^0.2.2",
-    "autoprefixer": "^10.4.21",
-    "bumpp": "^10.1.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "eslint": "^9.26.0",
-    "happy-dom": "^17.4.6",
-    "lucide-react": "^0.513.0",
-    "postcss": "^8.5.4",
-    "prettier": "^3.5.3",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "tailwind-merge": "^3.3.0",
-    "tailwindcss": "^4.1.8",
-    "tsdown": "^0.11.1",
-    "tsx": "^4.19.4",
-    "typescript": "^5.8.3",
-    "vite": "npm:rolldown-vite@latest",
-    "vite-plugin-dts": "^4.5.4",
-    "vitest": "^3.1.3"
-  },
-  "prettier": "@sxzz/prettier-config"
+  "prettier": "@sxzz/prettier-config",
+  "yalcSig": "9d34700f90a222b05709a9c6a71cb28e"
 }
