--- a/frontend/agent-chat/package.json
+++ b/frontend/agent-chat/package.json
@@ -62,6 +62,7 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^4.14.1",
     "@sxzz/eslint-config": "^7.0.1",
     "@sxzz/prettier-config": "^2.2.1",
     "@testing-library/jest-dom": "^6.6.3",
@@ -75,6 +76,7 @@
     "bumpp": "^10.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "composite-kit": "^0.5.4",
     "eslint": "^9.26.0",
     "happy-dom": "^17.4.6",
     "lucide-react": "^0.513.0",
@@ -86,6 +88,7 @@
     "tailwindcss": "^4.1.8",
     "tsdown": "^0.11.1",
     "tsx": "^4.19.4",
+    "tw-animate-css": "^1.3.4",
     "typescript": "^5.8.3",
     "vite": "npm:rolldown-vite@latest",
     "vite-plugin-dts": "^4.5.4",
