--- a/frontend/agent-chat/tsconfig.json
+++ b/frontend/agent-chat/tsconfig.json
@@ -4,8 +4,12 @@
     "jsx": "react",
     "lib": ["es2023", "dom", "dom.iterable"],
     "moduleDetection": "force",
+    "baseUrl": ".",
     "module": "preserve",
     "moduleResolution": "bundler",
+    "paths": {
+      "@/*": ["src/*"]
+    },
     "resolveJsonModule": true,
     "types": ["node"],
     "strict": true,
