--- a/frontend/agent-chat/package.json
+++ b/frontend/agent-chat/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@agent-labs/agent-chat",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "packageManager": "pnpm@10.10.0",
   "description": "A React component library for building AI agent chat interfaces.",
   "type": "module",
@@ -59,7 +59,12 @@
     "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.1",
     "rxjs": "^7.8.2",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "composite-kit": "^0.5.4",
+    "lucide-react": "^0.513.0",
+    "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.14.1",
@@ -74,17 +79,12 @@
     "@vitejs/plugin-react-oxc": "^0.2.2",
     "autoprefixer": "^10.4.21",
     "bumpp": "^10.1.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "composite-kit": "^0.5.4",
     "eslint": "^9.26.0",
     "happy-dom": "^17.4.6",
-    "lucide-react": "^0.513.0",
     "postcss": "^8.5.4",
     "prettier": "^3.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.8",
     "tsdown": "^0.11.1",
     "tsx": "^4.19.4",
