--- a/package.json
+++ b/package.json
@@ -25,8 +25,5 @@
     "typescript"
   ],
   "author": "Agent Labs",
-  "license": "MIT",
-  "dependencies": {
-    "@agent-labs/agent-chat": "file:.yalc/@agent-labs/agent-chat"
-  }
+  "license": "MIT"
 }
