--- a/frontend/agent-chat/package.json
+++ b/frontend/agent-chat/package.json
@@ -50,21 +50,22 @@
     "@ag-ui/client": "^0.0.28",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-slot": "^1.2.3",
+    "@shadcn/ui": "^0.0.4",
     "@tailwindcss/postcss": "^4.1.8",
     "@tailwindcss/vite": "^4.1.8",
     "@types/json-schema": "^7.0.15",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "composite-kit": "^0.5.4",
     "json-schema": "^0.4.0",
+    "lucide-react": "^0.513.0",
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.1",
     "rxjs": "^7.8.2",
-    "uuid": "^11.1.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "composite-kit": "^0.5.4",
-    "lucide-react": "^0.513.0",
-    "tailwind-merge": "^3.3.0"
+    "tailwind-merge": "^3.3.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.14.1",
