--- a/frontend/agent-chat/package.json
+++ b/frontend/agent-chat/package.json
@@ -35,7 +35,7 @@
     "lint:fix": "pnpm run lint --fix",
     "build": "vite build",
     "dev": "vite build --watch",
-    "playground": "vite --config playground/vite.config.ts",
+    "playground": "vite --config playground/vite.config.mjs",
     "test": "vitest",
     "typecheck": "tsc --noEmit",
     "format": "prettier --cache --write .",
