feat: support both agent-chat-window and agent-chat-core

--- a/frontend/agent-chat/playground/tsconfig.json
+++ b/frontend/agent-chat/playground/tsconfig.json
@@ -17,7 +17,8 @@
     "noFallthroughCasesInSwitch": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "@agent-labs/agent-chat": ["../src"]
     }
   },
   "include": ["src"],
