--- a/frontend/agent-chat/playground/package.json
+++ b/frontend/agent-chat/playground/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.7.0",
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
