--- a/frontend/agent-chat/playground/package.json
+++ b/frontend/agent-chat/playground/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "clsx": "^2.1.1",
+    "composite-kit": "^0.5.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.3.0"
