--- a/frontend/agent-chat/package.json
+++ b/frontend/agent-chat/package.json
@@ -48,6 +48,8 @@
   },
   "dependencies": {
     "@ag-ui/client": "^0.0.28",
+    "@ai-sdk/react": "^1.2.12",
+    "@ai-sdk/ui-utils": "^1.2.11",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-slot": "^1.2.3",
     "@shadcn/ui": "^0.0.4",
