--- a/packages/agent-server/package.json
+++ b/packages/agent-server/package.json
@@ -33,6 +33,8 @@
   "license": "MIT",
   "dependencies": {
     "@ag-ui/client": "^0.0.28",
+    "@ag-ui/core": "^0.0.30",
+    "@ag-ui/encoder": "^0.0.30",
     "@types/cors": "^2.8.19",
     "@types/morgan": "^1.9.10",
     "cors": "^2.8.5",
