--- a/frontend/agent-chat/package.json
+++ b/frontend/agent-chat/package.json
@@ -43,11 +43,12 @@
     "prepublishOnly": "pnpm run build"
   },
   "peerDependencies": {
+    "@ag-ui/client": "^0.0.30",
+    "@ag-ui/core": "^0.0.30",
     "react": "^18.0.0 || ^19.0.0",
     "react-dom": "^18.0.0 || ^19.0.0"
   },
   "dependencies": {
-    "@ag-ui/client": "^0.0.28",
     "@ai-sdk/react": "^1.2.12",
     "@ai-sdk/ui-utils": "^1.2.11",
     "@radix-ui/react-avatar": "^1.1.10",
