--- a/frontend/agent-chat/package.json
+++ b/frontend/agent-chat/package.json
@@ -62,6 +62,7 @@
     "clsx": "^2.1.1",
     "composite-kit": "^0.5.4",
     "json-schema": "^0.4.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.513.0",
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^15.6.1",
@@ -76,6 +77,7 @@
     "@sxzz/prettier-config": "^2.2.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "@types/lodash": "^4.17.19",
     "@types/node": "^22.15.17",
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.4",
