feat: release @agent-labs/agent-chat v1.6.0 with improved API and removed default tools
- Rename props for better semantic clarity:
  - tools -> defaultToolDefs
  - toolRenderers -> defaultToolRenderers
  - contexts -> defaultContexts
  - Add defaultToolExecutors prop support

- Remove all default tools for better flexibility:
  - Delete code.tsx and user-confirmation.tsx
  - Export empty default tool arrays
  - Reduce package size by ~11%

- Update documentation and examples:
  - Update API reference tables
  - Fix all demo components
  - Add note about no default tools

- Fix various lint and type issues:
  - Remove globals package dependency
  - Fix React hooks usage in tool renderers
  - Clean up unused imports and parameters

- Verify compatibility in agentic-app-demo
- Successfully publish v1.6.0 to npm

--- a/examples/agentic-app-demo/package.json
+++ b/examples/agentic-app-demo/package.json
@@ -10,8 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@ag-ui/client": "^0.0.28",
-    "@agent-labs/agent-chat": "^1.1.6",
+    "@ag-ui/client": "^0.0.30",
+    "@agent-labs/agent-chat": "1.6.0",
     "composite-kit": "^0.5.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
