--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "pnpm -r test",
     "clean": "pnpm -r clean",
     "dev:chat": "pnpm --filter @agent-labs/agent-chat dev",
-    "chat:playground": "pnpm --filter @agent-labs/agent-chat playground",
+    "playground": "pnpm --filter @agent-labs/agent-chat playground",
     "dev:server": "pnpm --filter @agent-labs/ag-ui-server dev",
     "dev:demo": "pnpm --filter agentic-app-demo dev",
     "build:chat": "pnpm --filter @agent-labs/agent-chat build",
