chore: update @ag-ui/client dependency to v0.0.37

--- a/frontend/agent-chat/playground/package.json
+++ b/frontend/agent-chat/playground/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.7.0",
   "dependencies": {
+    "@ag-ui/client": "^0.0.37",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
     "@types/react": "^19.1.8",
