--- a/packages/agent-server/package.json
+++ b/packages/agent-server/package.json
@@ -35,6 +35,7 @@
     "@ag-ui/client": "^0.0.28",
     "@ag-ui/core": "^0.0.30",
     "@ag-ui/encoder": "^0.0.30",
+    "rxjs": "^7.8.1",
     "@types/cors": "^2.8.19",
     "@types/morgan": "^1.9.10",
     "cors": "^2.8.5",
