--- a/packages/agent-toolkit/package.json
+++ b/packages/agent-toolkit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@agent-labs/agent-toolkit",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": false,
   "description": "Pure logic toolkit for agent streaming, tool orchestration, and argument accumulation.",
   "type": "module",
@@ -12,6 +12,8 @@
   ],
   "scripts": {
     "build": "tsdown",
+    "release": "bumpp && pnpm publish",
+    "prepublishOnly": "pnpm run build",
     "dev": "tsdown --watch",
     "lint": "echo 'no lint config yet'",
     "test": "node --version",
