--- a/examples/agentic-app-demo/package.json
+++ b/examples/agentic-app-demo/package.json
@@ -10,9 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@ag-ui/client": "^0.0.30",
-    "@agent-labs/agent-chat": "1.7.0",
-    "composite-kit": "^0.5.4",
+    "@agent-labs/agent-chat": "workspace:*",
+    "@agent-labs/agent-toolkit": "workspace:*",
+    "openai": "^4.0.0",
+    "rxjs": "^7.8.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
