--- a/packages/agent-toolkit/package.json
+++ b/packages/agent-toolkit/package.json
@@ -22,6 +22,15 @@
   "dependencies": {
     "rxjs": "^7.8.1"
   },
+  "peerDependencies": {
+    "@agent-labs/agent-chat": "^1.21.0",
+    "openai": "^4.0.0"
+  },
+  "peerDependenciesMeta": {
+    "openai": {
+      "optional": true
+    }
+  },
   "devDependencies": {
     "tsdown": "^0.12.7",
     "typescript": "^5.3.2",
